image path modified

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -82,7 +82,7 @@
     .portrait {
       width: 270px;
       height: 250px;
-      background: url("../dist/img/logo.jpg");
+      background: url("../img/logo.jpg");
       background-position: center;
       background-size: cover;
       border-radius: 50%;
