--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -40,13 +40,14 @@
     transform: translate3d(100%, 0, 0);
 
     .portrait {
-      background: url(/dist/img/logo.jpg);
+      background: url("../img/logo.jpg");
       width: 150px;
       height: 150px;
       background-position: center;
       background-size: cover;
     }
   }
+
   .about-info {
     grid-template-areas:
       "bioimage"
